<resources>
    <string name="app_name">WeatherApp</string>
    <string name="home">Home</string>
    <string name="camera">Camera</string>
    <string name="settings">Settings</string>

    <string name="please_wait">Please Wait...</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="choose_city">Choose City</string>
    <string name="save">Save</string>
    <string name="battery_status">Batter Status</string>
    <string name="wifi_status">Wifi Status</string>
    <string name="use_location">Use Location</string>
</resources>
